starsky/starsky/clientapp/src/style/css/20-content.css
/* content */

.content > div,
.content > form {
  padding-left: 25px;
  padding-right: 25px;
}
@media screen and (max-width: 450px) {
  .content > div,
  .content > form {
    padding-left: 10px;
    padding-right: 10px;
  }
}

.content b {
  font-weight: 300;
}

.content--header,
.content--subheader {
  padding: 15px;
  padding-left: 10px;
  min-height: 50px;
  line-height: 20px;
  background-color: #eceff1;
}

@keyframes fadeinOpacity {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.content--subheader.fade-in,
.content--header.fade-in {
  animation: fadeinOpacity 8s;
}

@media screen and (max-height: 330px) {
  .content--header,
  .content--subheader {
    font-size: 15px;
  }
}

.content--header b,
.content--subheader b {
  font-weight: 300;
}

.content--subheader {
  background-color: #f5f8fa;
  /* lighter than Blue Gray 50 ECEFF1*/
}

@media (prefers-color-scheme: dark) {
  .content--header {
    background-color: #455a64;
    color: #fff;
  }
  .content--subheader {
    background-color: #546e7a;
    color: #fff;
  }
}
.content--text > button {
  color: #000;
  background-color: transparent;
}

@media (prefers-color-scheme: dark) {
  .content--text > button {
    color: #fff;
  }
}

.content--text > button.box:hover,
.content--text > a.box:hover {
  background-color: #eceff1;
  border-radius: 3px;
  cursor: pointer;
}

@media (prefers-color-scheme: dark) {
  .content--text > button.box:hover,
  .content--text > a.box:hover {
    background-color: #263238;
  }
}

.content--text > button.box:disabled:hover {
  background-color: transparent;
  cursor: not-allowed;
}

.content--text {
  padding: 10px;
}

.content--text.no-left-padding {
  padding-left: 0px;
}

.content--text .date {
  display: inline-block;
  margin-right: 10px;
  text-align: center;
  margin-bottom: 10px;
}

.content--text .date-spacer {
  margin-right: 27px;
  display: inline-block;
}

.content--text .date p {
  margin-bottom: 4px;
}

.content--text label,
.content--text .btn,
.content--text h4 {
  margin-top: 10px;
  margin-bottom: 5px;
}

.content--text label {
  display: block;
}

@media (prefers-color-scheme: dark) {
  .content--text h4,
  .content--text label {
    color: #fff;
  }
}

.content--header .btn,
.content--text .btn {
  margin-right: 10px;
}

.content--text h4:first-child {
  margin-top: 0px;
}

.content > .content--login-form {
  margin-top: 20px;
  width: 100%;
}

@media (prefers-color-scheme: dark) {
  .content > .content--login-form {
    color: #fff;
  }
}

.content--text .warning-box,
.content .warning-box,
.content > form > .content--error-true {
  background-color: #283593;
  color: white;
  padding: 5px;
  line-height: 24px;
  border-radius: 5px;
  margin-bottom: 8px;
}

.warning-box.warning-box--under-form {
  margin-top: 25px;
}

.content--text .warning-box:before,
.content .warning-box:before,
.content > form > .content--error-true:before {
  content: "";
  background-color: white;
  /* fixes for webkit */
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-repeat: no-repeat;
  mask-position: center;
  height: 24px;
  padding-left: 24px;
  margin-right: 7px;
  padding-top: 3px;
  padding-bottom: 3px;

  -webkit-mask-image: url("../images/baseline-error-24px.svg");
  mask-image: url("../images/baseline-error-24px.svg");
}

.content--text .warning-box.warning-box--optional,
.content .warning-box.warning-box--optional,
.content > form > .content--error-true.warning-box--optional {
  background-color: #78909c;
}

.content > .content--login-form > button {
  margin-bottom: 8px;
}

.content > .content--login-form > .alternative {
  margin-left: 15px;
  font-size: 14px;
  font-weight: normal;
  color: #263238;
  position: relative;
  top: -3px;
  display: inline;
}

@media screen and (max-width: 370px) {
  .content > .content--login-form > .alternative {
    display: block;
    margin-top: 12px;
    margin-left: 10px;
    margin-bottom: 10px;
  }
}

@media (prefers-color-scheme: dark) {
  .content > .content--login-form > .alternative {
    color: #fff;
  }
}

.content > .content--login-form > label {
  display: block;
  margin-bottom: 8px;
}

.content > .content--login-form > input {
  margin-bottom: 15px;
}

.content > .content--login-form > .btn {
  margin-right: 10px;
}

.content .legal-text-row {
  line-height: 1.3;
  margin-bottom: 15px;
}
.content .legal-text-row a {
  text-decoration: underline;
}

@media (prefers-color-scheme: dark) {
  .content .legal-text-row a {
    color: #fff;
  }
}

.publish .warning-box {
  margin-top: 4px;
}

/*for password gui*/
@media (prefers-color-scheme: dark) {
  .preferences-username-text {
    color: #fff;
  }
}

